# causal-bundle-completion

./: .gitignore  README.md  pyproject.toml
code/reference/: README.md  ddbc_decode.py  fusion.py  ranking_metrics.py  reranker.py  significance.py
docs/: datasets_in_literature.md
docs/baselines/: ddbc-repro-spec.md
docs/findings/: 00-SUMMARY.md  2026-06-26-d2-mealrec-results.md  2026-06-27-phase6-verdict.md  2026-06-27-stage1-probe-a-findings.md  2026-06-27-stage2-reranker-results.md  2026-06-28-winner-retrieve-rerank.md  2026-06-30-cec-m05-premise.md  2026-06-30-strategic-rethink-after-cec.md  2026-07-01-synergy-gate-verdict.md
docs/findings/memory-snapshots/: g3-control-parity-result.md  phase6-cpu-done-gpu-pending.md  push-to-winner-method.md  recovery-complementarity-winner.md  winner-needs-three-datasets.md
docs/learnings/: LEARNINGS-from-bundle-ranking-project.md
docs/superpowers/plans/: 2026-06-30-cec-m05-exposure-premise-falsification.md  (+1 more)
research/: 00-RESEARCH-KICKOFF.md  01-brainstorm-kickoff-causal-construction-lines.md  promising-research-lines.md  seed-sources.md
research/outputs/: causal-recsys-bundle-construction.md  causal-recsys-bundle-construction.provenance.md
scripts/: cec_m05_exposure_premise.py  cec_m05_mealrec.py  synergy_m1_gate.py
src/cec/: __init__.py  exposure.py  stratify.py
src/synergy/: counts.py  gate.py  interaction.py  rankinv.py
tests/: test_exposure.py  test_smoke.py  test_stratify.py  test_synergy_counts.py  test_synergy_gate.py  test_synergy_interaction.py  test_synergy_rankinv.py  test_synergy_runner_smoke.py
(+9 files in other folders)
